correcting spacing

--- a/css/core/_header.scss
+++ b/css/core/_header.scss
@@ -6,7 +6,7 @@
         position: relative;
         max-width: $container-width;
         width: 100%;
-        padding: 0;
+        padding: 0 0.5em;
         height: 7em;
         display: flex;
         align-items: center;
