--- a/css/style.css
+++ b/css/style.css
@@ -797,7 +797,7 @@ hr::before {
   position: relative;
   max-width: 1400px;
   width: 100%;
-  padding: 0;
+  padding: 0 0.5em;
   height: 7em;
   display: flex;
   align-items: center;
